--- a/src/components/Slot/style.css
+++ b/src/components/Slot/style.css
@@ -1,6 +1,6 @@
 .slot {
-    margin: 20px 10px;
-    padding: 20px 10px;
+    margin: 10px 10px;
+    padding: 10px 10px;
     width: 25%;
     min-width: 235px;
     height: 22vh;
